Name:           haskey
Version:        2.0.2
Synopsis:       Password management
Author:         frozencemetery
Maintainer:     rharwood@club.cc.cmu.edu
Category:       Utilities
Build-type:     Simple
Cabal-version:  >=1.2

Executable haskey
  Main-Is:              Main.hs
  Hs-Source-Dirs:       src
  Build-Depends:        base, random, xtest, X11, gtk, unix, process, deepseq
  Ghc-options:          -Wall
