Name:           pwman
Version:        1.2
Synopsis:       Password management
Author:         frozencemetery
Maintainer:     rharwood@club.cc.cmu.edu
Category:       Utilities
Build-type:     Simple
Cabal-version:  >=1.2

Executable pwman
  Main-Is:              Main.hs
  Hs-Source-Dirs:       src
  Build-Depends:        base, random, xtest, X11, Crypto, gtk
  Extensions:           
